add language switcher

--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
 -->
 <html>
 	<head>
-		<title>Story by HTML5 UP</title>
+		<title>CITIZENSHIP BY INVESTMENT PROGRAMMEP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+		
+		<div id="language-switcher">
+  			<select id="language-selector">
+    			<option value="en">English</option>
+    			<option value="fr">French</option>
+    			<option value="jp">Japanese</option>
+  			</select>
+		</div>
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
@@ -20,7 +28,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>CITIZENSHIP</h1>
+							<h1 id="title">CITIZENSHIP</h1>
 							<p class="major">BY INVESTMENT PROGRAMME</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
