--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 		<div id="language-switcher">
   			<select id="language-selector">
     			<option value="en">English</option>
-    			<option value="fr">French</option>
-    			<option value="jp">Japanese</option>
+    			<option value="fr">Français</option>
+    			<option value="sp">Español</option>
+			<option value="jp">日本語</option>
+			<option value="cn">中文</option>
   			</select>
 		</div>
 
