added definition list

--- a/index.html
+++ b/index.html
@@ -309,6 +309,30 @@
 							</div>
 						</div>
 					</section>
+				
+				<!-- Definition List -->
+					<section>
+						<header>
+							<h3>Definition List</h3>
+						</header>
+							<div class="content">
+								<dl>
+									<dt>Interdum adipiscing odio</dt>
+										<dd>
+											<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent fringilla quis tincidunt felis sagittis eget tempus euismod. Ante ipsum primis vestibulum.</p>
+										</dd>
+											<dt>Non faucibus ornare mi ut ante</dt>
+										<dd>
+											<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent fringilla quis tincidunt felis sagittis eget tempus euismod. Ante ipsum primis vestibulum.</p>
+										</dd>
+											<dt>Felis amet dolore viverra</dt>
+										<dd>
+											<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent fringilla quis tincidunt felis sagittis eget tempus euismod. Ante ipsum primis vestibulum.</p>
+										</dd>
+								</dl>
+
+							</div>
+					</section>
 
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
