trying to fix alignment of definition list

--- a/index.html
+++ b/index.html
@@ -311,11 +311,11 @@
 					</section>
 				
 				<!-- Definition List -->
-					<section>
+					<section class="wrapper style1 align-center">
 						<header>
 							<h3>Definition List</h3>
 						</header>
-							<div class="content">
+							<div class="inner medium">
 								<dl>
 									<dt>Interdum adipiscing odio</dt>
 										<dd>
