--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
 						</div>
 					</section>
-
+			<!-- Removing footer with Twitter, Facebook, Instagram, LinkedIn links for now
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
@@ -386,6 +386,7 @@
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
+			-->
 
 			</div>
 
