--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@
 
 						</div>
 					</section>
-			<!-- Removing footer with Twitter, Facebook, Instagram, LinkedIn links for now
-				<!-- Footer -->
+				<!-- Footer: Removing footer with Twitter, Facebook, Instagram, LinkedIn links for now
+
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
@@ -386,7 +386,7 @@
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
-			-->
+				-->
 
 			</div>
 
