--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
 						</div>
 					</section>
 				
-				<!-- Additional Elements -->
+				<!-- Frequently Asked Questions -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Additional Elements</h2>
+							<h2>Frequently Asked Questions</h2>
 							<p>Finally, here are some additional elements you <em>might</em> find useful (and yup, they look fine with any <span class="demo-controls">appearance</span>).</p>
 							<div class="index align-left">
 								
@@ -325,18 +325,39 @@
 										<div class="content">
 
 											<dl>
-												<dt>Interdum adipiscing odio</dt>
+												<dt>What are the requirements of becoming a Saint Kitts and Nevis citizen by investment?</dt>
 												<dd>
-													<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent fringilla quis tincidunt felis sagittis eget tempus euismod. Ante ipsum primis vestibulum.</p>
+													<p>The main applicant must be at least eighteen (18) years of age, must have made an investment in the prescribed amount, and must meet other application requirements.</p>
 												</dd>
-												<dt>Non faucibus ornare mi ut ante</dt>
+												<dt>Can I contact the Citizenship by Investment Unit (CIU) directly?</dt>
 												<dd>
-													<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent fringilla quis tincidunt felis sagittis eget tempus euismod. Ante ipsum primis vestibulum.</p>
+													<p>The CIU only engages with ‘Authorized Persons’. An ‘Authorized Person’ is an individual or entity approved by the Financial Services Regulatory Commission (FRSC) of Saint Kitts and Nevis licensed to conduct corporate or trust services in Saint Kitts and Nevis. An ‘Authorized Person’ is appointed by the main applicant by way of Limited Power of Attorney to act on their behalf in relation to all matters regarding their Citizenship by Investment application. The ‘Authorized Person’ is required to provide professional advice, assist and give details regarding the application process and help with the preparation and submission of an application for Citizenship by investment and its supporting documents. The ‘Authorized Person’ will communicate with the Citizenship by Investment Unit and maintain a point of contact to review all matters surrounding the application, make payments and submit and collect all important correspondences.</p>
 												</dd>
-												<dt>Felis amet dolore viverra</dt>
+												<dt>Are the application forms available online?</dt>
 												<dd>
-													<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent fringilla quis tincidunt felis sagittis eget tempus euismod. Ante ipsum primis vestibulum.</p>
+													<p>The application forms for Citizenship by Investment can only be obtained and submitted to the Citizenship by Investment Unit by an ‘Authorized Person’.</p>
 												</dd>
+												<dt>How long does the application process take?</dt>
+												<dd>
+													<p>The application process may take as little as 60~90 days but may be delayed depending on the profile of the applicant. Applicants will be kept informed of the status of their applications through their ‘Authorized Person’.</p>
+												</dd>
+												<dt>Can I submit my application in a language other than English?</dt>
+												<dd>
+													<p>No. All applications and documents that are not in English are not prescribed or accepted by the Citizenship by Investment Unit, and every foreign language document must be submitted along with a certified translated English version.</p>
+												</dd>
+												<dt>Can two or more applicants apply for citizenship by investment together?</dt>
+												<dd>
+													<p>Yes. Two or more applicants may apply for citizenship together by purchasing one piece of real estate, provided each main applicant contributes the minimum investment.</p>
+												</dd>
+												<dt>Can my family be included with my application?</dt>
+												<dd>
+													<p>Yes. All permitted dependents (spouse, children, siblings, parents, etc.) can easily be included in your application for economic citizenship, providing the relationship with each dependent meets certain specific basic financial criteria (e.g., economic dependency).</p>
+												</dd>
+												<dt>Who are permitted dependents?</dt>
+												<dd>
+													<p>Permitted dependents include: a spouse of the main applicant; a child if under 18 years of the main applicant or of his/her spouse; a child if between 18 and 30 years of the main applicant or his/her spouse, who is in full-time attendance at a recognized institution of higher learning after his/her 18th birthday, and who is fully supported by the main applicant; parents and/or grandparents of the main applicant or his/her spouse above the age of 55, living with and supported economically by the main applicant; a child if above the age of 18 of the main applicant or his/ her spouse and who is physically or mentally disabled; and a sibling of the main applicant or his/her spouse who is unmarried, childless, 30 years of age or younger and dependent on the applicant for financial support.</p>
+												</dd>
+
 											</dl>
 
 										</div>
