--- a/index.html
+++ b/index.html
@@ -243,67 +243,67 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Ipsum sed consequat</h2>
+							<h2>Why Saint Kitts and Nevis?</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-gem"></span>
-									<h3>Lorem</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Visa</h3>
+									<p>Visa-free access to nearly 150 countries and territories worldwide, including the United Kingdom, European Union, Hong Kong and Singapore</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
-									<h3>Ipsum</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Required Residency</h3>
+									<p>There is no requirement to live in Saint Kitts and Nevis, but you are fully entitled to live there</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
-									<h3>Dolor</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Dependents</h3>
+									<p>You, your spouse, your dependents (depending on age and economical relationship siblings, parents, etc.) as well as your descendants can enjoy full citizenship for life</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-wifi"></span>
-									<h3>Amet</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Discretion</h3>
+									<p>Proper discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
-									<h3>Magna</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Fiscality</h3>
+									<p>A low tax regime, exempting taxes on worldwide income, capital gains and inheritance</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>Tempus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Wealth Management</h3>
+									<p>An environment conducive to starting a business, managing wealth and nurturing an investment</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-desktop"></span>
-									<h3>Aliquam</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Efficient Process</h3>
+									<p>A hassle-free and efficient application process which rapidly confirms the outcome of your application. There are no requirements for previous investor or business experience, no requirements either for English language proficiency or for attending any interview</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-sync-alt"></span>
-									<h3>Elit</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Accelerated Process</h3>
+									<p>There is also an Accelerated Application Process (AAP) approved by the Government of Saint Kitts and Nevis which allows applications with the Citizenship by Investment Program to be accelerated and fast tracked. Interested persons applying utilizing the AAP will still be required to meet all mandatory criteria and submit the necessary supporting documents to apply</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-hashtag"></span>
-									<h3>Morbi</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Pristine Weather</h3>
+									<p>Saint Kitts and Nevis is well known and particularly famous for beautiful beaches, pristine tropical forests and friendly locals</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-bolt"></span>
-									<h3>Turpis</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Safe</h3>
+									<p>Saint Kitts and Nevis is safe, walkable and has great weather</p>
+								</section>
+								<section>
+									<span class="icon solid style2 major fa-leaf"></span>
+									<h3>English access</h3>
+									<p>Saint Kitts and Nevis citizens are fluent English speakers</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-envelope"></span>
 									<h3>Ultrices</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-leaf"></span>
-									<h3>Risus</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 							</div>
@@ -357,7 +357,14 @@
 												<dd>
 													<p>Permitted dependents include: a spouse of the main applicant; a child if under 18 years of the main applicant or of his/her spouse; a child if between 18 and 30 years of the main applicant or his/her spouse, who is in full-time attendance at a recognized institution of higher learning after his/her 18th birthday, and who is fully supported by the main applicant; parents and/or grandparents of the main applicant or his/her spouse above the age of 55, living with and supported economically by the main applicant; a child if above the age of 18 of the main applicant or his/ her spouse and who is physically or mentally disabled; and a sibling of the main applicant or his/her spouse who is unmarried, childless, 30 years of age or younger and dependent on the applicant for financial support.</p>
 												</dd>
-
+												<dt>Does the program recognize same sex marriage?</dt>
+												<dd>
+													<p>No, the laws of Saint Kitts and Nevis currently define “spouse” as the partner of the opposite sex by marriage.</p>
+												</dd>
+												<dt>What is the maximum number of dependents allowed by a main applicant?</dt>
+												<dd>
+													<p>There is no limit on the number of permitted dependents.</p>
+												</dd>
 											</dl>
 
 										</div>
