--- a/index.html
+++ b/index.html
@@ -314,56 +314,83 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Frequently Asked Questions</h2>
+							<!--
 							<p>Finally, here are some additional elements you <em>might</em> find useful (and yup, they look fine with any <span class="demo-controls">appearance</span>).</p>
+							-->
+							<p>Finally, here are some additional questions and answers you might find useful.</p>
 							<div class="index align-left">
 								
 								<!-- Definition List -->
 									<section>
 										<header>
-											<h3>Definition List</h3>
+											<h3>Questions:</h3>
 										</header>
 										<div class="content">
 
 											<dl>
-												<dt>What are the requirements of becoming a Saint Kitts and Nevis citizen by investment?</dt>
+												<dt>1. What are the requirements of becoming a Saint Kitts and Nevis citizen by investment?</dt>
 												<dd>
 													<p>The main applicant must be at least eighteen (18) years of age, must have made an investment in the prescribed amount, and must meet other application requirements.</p>
 												</dd>
-												<dt>Can I contact the Citizenship by Investment Unit (CIU) directly?</dt>
+												<dt>2. Can I contact the Citizenship by Investment Unit (CIU) directly?</dt>
 												<dd>
 													<p>The CIU only engages with ‘Authorized Persons’. An ‘Authorized Person’ is an individual or entity approved by the Financial Services Regulatory Commission (FRSC) of Saint Kitts and Nevis licensed to conduct corporate or trust services in Saint Kitts and Nevis. An ‘Authorized Person’ is appointed by the main applicant by way of Limited Power of Attorney to act on their behalf in relation to all matters regarding their Citizenship by Investment application. The ‘Authorized Person’ is required to provide professional advice, assist and give details regarding the application process and help with the preparation and submission of an application for Citizenship by investment and its supporting documents. The ‘Authorized Person’ will communicate with the Citizenship by Investment Unit and maintain a point of contact to review all matters surrounding the application, make payments and submit and collect all important correspondences.</p>
 												</dd>
-												<dt>Are the application forms available online?</dt>
+												<dt>3. Are the application forms available online?</dt>
 												<dd>
 													<p>The application forms for Citizenship by Investment can only be obtained and submitted to the Citizenship by Investment Unit by an ‘Authorized Person’.</p>
 												</dd>
-												<dt>How long does the application process take?</dt>
+												<dt>4. How long does the application process take?</dt>
 												<dd>
 													<p>The application process may take as little as 60~90 days but may be delayed depending on the profile of the applicant. Applicants will be kept informed of the status of their applications through their ‘Authorized Person’.</p>
 												</dd>
-												<dt>Can I submit my application in a language other than English?</dt>
+												<dt>5. Can I submit my application in a language other than English?</dt>
 												<dd>
 													<p>No. All applications and documents that are not in English are not prescribed or accepted by the Citizenship by Investment Unit, and every foreign language document must be submitted along with a certified translated English version.</p>
 												</dd>
-												<dt>Can two or more applicants apply for citizenship by investment together?</dt>
+												<dt>6. Can two or more applicants apply for citizenship by investment together?</dt>
 												<dd>
 													<p>Yes. Two or more applicants may apply for citizenship together by purchasing one piece of real estate, provided each main applicant contributes the minimum investment.</p>
 												</dd>
-												<dt>Can my family be included with my application?</dt>
+												<dt>7. Can my family be included with my application?</dt>
 												<dd>
 													<p>Yes. All permitted dependents (spouse, children, siblings, parents, etc.) can easily be included in your application for economic citizenship, providing the relationship with each dependent meets certain specific basic financial criteria (e.g., economic dependency).</p>
 												</dd>
-												<dt>Who are permitted dependents?</dt>
+												<dt>8. Who are permitted dependents?</dt>
 												<dd>
 													<p>Permitted dependents include: a spouse of the main applicant; a child if under 18 years of the main applicant or of his/her spouse; a child if between 18 and 30 years of the main applicant or his/her spouse, who is in full-time attendance at a recognized institution of higher learning after his/her 18th birthday, and who is fully supported by the main applicant; parents and/or grandparents of the main applicant or his/her spouse above the age of 55, living with and supported economically by the main applicant; a child if above the age of 18 of the main applicant or his/ her spouse and who is physically or mentally disabled; and a sibling of the main applicant or his/her spouse who is unmarried, childless, 30 years of age or younger and dependent on the applicant for financial support.</p>
 												</dd>
-												<dt>Does the program recognize same sex marriage?</dt>
+												<dt>9. Does the program recognize same sex marriage?</dt>
 												<dd>
 													<p>No, the laws of Saint Kitts and Nevis currently define “spouse” as the partner of the opposite sex by marriage.</p>
 												</dd>
-												<dt>What is the maximum number of dependents allowed by a main applicant?</dt>
+												<dt>10. What is the maximum number of dependents allowed by a main applicant?</dt>
 												<dd>
 													<p>There is no limit on the number of permitted dependents.</p>
+												</dd>
+												<dt>11. What are the fees involved?</dt>
+												<dd>
+													<p>All applicants and permitted dependents are required to pay due diligence and processing fees, which will be presented by the ‘Authorized Person’ at application.</p>
+												</dd>
+												<dt>12. Can an applicant remit fees directly to the CIU?</dt>
+												<dd>
+													<p>No, all applicants are required to pay the processing fees, the due diligence fees as well as the Government fees through their chosen ‘Authorized Person’. Wire transfers to the Unit are only applicable for approved applicants for the remittance of Sustainable Growth Fund contributions.</p>
+												</dd>
+												<dt>13. If I am no longer interested in becoming a citizen, will my monies be refunded?</dt>
+												<dd>
+													<p>A portion of the application fees can indeed be refunded, with the exception of the due diligence fees, the processing fees and perhaps some of the services charges already executed.</p>
+												</dd>
+												<dt>14. Do I have to reside in Saint Kitts and Nevis in order to apply for citizenship?</dt>
+												<dd>
+													<p>. Residing in Saint Kitts and Nevis is not required when applying for citizenship using the Citizenship by Investment Option.</p>
+												</dd>
+												<dt>15. What is a Police Certificate?</dt>
+												<dd>
+													<p>A police certificate refers to a statement from a national law enforcement authority on the status of a person’s criminal record. It is also referred to as “certificate of no criminal record” or “police clearance record”.</p>
+												</dd>
+												<dt>16. Who is required to produce a police certificate?</dt>
+												<dd>
+													<p>Each main applicant and all permitted dependents 16 years and older are required to produce a police certificate. Our team can provide you with some support regarding the process of obtention of the certificate.</p>
 												</dd>
 											</dl>
 
@@ -378,6 +405,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
+							<h3>We can arrange for online video meetings at any moment early into the process, to help provide any new applicant with all additional details.</h3>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
