--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<h2>Saint Kitts and Nevis Citizenship</h2>
 							<p>The Saint Kitts and Nevis Citizenship by Investment Program was established in 1984, making it the oldest program of this kind in the world. In close to 40 years of operation, it has distinguished itself by its exceptional investment options and meticulous due diligence procedures. To this day, Saint Kitts and Nevis remains the world’s most reputable jurisdiction for the conferral of citizenship by investment.</p>
 							<ul class="actions stacked">
-								<li><a href="#contact" class="button">Learn More</a></li>
+								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -61,7 +61,7 @@
 							<h2>Jurisdiction</h2>
 							<p>Saint Kitts and Nevis, also known as ‘Saint Christopher and Nevis’ forms part of the group of islands known as the Lesser Antilles, located some 2,000 km to the southeast of the state of Florida. Saint Kitts and Nevis was home to the first British and French colonies in the Caribbean, and thus has also been titled "The Mother Colony of the West Indies". The country has beautiful beaches, reefs, wonderful cool climate, enjoyable throughout the year. The country is also well connected by direct and easy flights from Canada, many cities in the US, Europe, and most Caribbean airliners.</p>
 							<ul class="actions stacked">
-								<li><a href="#contact" class="button">Learn More</a></li>
+								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -75,7 +75,7 @@
 							<h2>Business Practices</h2>
 							<p>Our firm processes citizenship applications directly in Saint Kitts and Nevis, enabling us to be apprised of new developments, so our clients are always well-informed in advance of any changes, and can rely on our support and expertise throughout the procedure and even afterwards.</p>
 							<ul class="actions stacked">
-								<li><a href="#contact" class="button">Learn More</a></li>
+								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
