--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
 									<h3>Required Residency</h3>
-									<p>There is no requirement to live in Saint Kitts and Nevis, but you are fully entitled to live there</p>
+									<p>There is no requirement to live in Saint Kitts and Nevis, but you are fully entitled to live there, as such residency is fully optional and not mandatory</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
@@ -269,12 +269,12 @@
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
 									<h3>Fiscality</h3>
-									<p>A low tax regime, exempting taxes on worldwide income, capital gains and inheritance</p>
+									<p>A low tax regime, exempting taxes on worldwide income, capital gains and inheritance, security and peace of mind of being a citizen of a country with a stable government and economy</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
 									<h3>Wealth Management</h3>
-									<p>An environment conducive to starting a business, managing wealth and nurturing an investment</p>
+									<p>An environment conducive to starting a business, managing wealth and nurturing an investment, the ability to own property in multiple jurisdictions, leaving a family legacy with rights such as citizenship by descent</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-desktop"></span>
@@ -288,8 +288,8 @@
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-hashtag"></span>
-									<h3>Pristine Weather</h3>
-									<p>Saint Kitts and Nevis is well known and particularly famous for beautiful beaches, pristine tropical forests and friendly locals</p>
+									<h3>Pristine Environment</h3>
+									<p>Saint Kitts and Nevis is well known and particularly famous for beautiful beaches, pristine tropical forests and friendly locals, the ability to live and work freely in multiple countries, greater future educational opportunities for children</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-bolt"></span>
@@ -317,7 +317,7 @@
 							<!--
 							<p>Finally, here are some additional elements you <em>might</em> find useful (and yup, they look fine with any <span class="demo-controls">appearance</span>).</p>
 							-->
-							<p>Finally, here are some additional questions and answers you might find useful.</p>
+							<p>Finally, here are some frequently asked questions and answers you might find useful.</p>
 							<div class="index align-left">
 								
 								<!-- Definition List -->
@@ -404,8 +404,8 @@
 				<!-- Seven -->
 					<section class="wrapper style1 align-center" id="contact">
 						<div class="inner medium">
-							<h2>Get in touch</h2>
-							<h3>We can arrange for online video meetings at any moment early into the process, to help provide any new applicant with all additional details.</h3>
+							<h2>Get in touch to learn more</h2>
+							<h3>We can arrange for online video meetings early into the process, to help provide you with any additional details.</h3>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
