Adding BOLD to country names

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Track Record</h2>
-							<p>We already have a lengthy proven track-record of successful applicants, and we have assisted numerous clients from around the world, including jurisdictions such as Lebanon, Nigeria, Germany, Japan, to successfully obtain citizenship.  If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will literally open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent children.</p>
+							<p>We already have a lengthy proven track-record of successful applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Germany</b>, <b>Japan</b>, to successfully obtain citizenship.  If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will literally open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent children.</p>
 						</div>
 
 						<!-- Gallery -->
