Editing the "Why SKN" section

--- a/index.html
+++ b/index.html
@@ -244,7 +244,9 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Why Saint Kitts and Nevis?</h2>
+							<!--
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							-->
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-gem"></span>
@@ -264,7 +266,7 @@
 								<section>
 									<span class="icon solid style2 major fa-wifi"></span>
 									<h3>Discretion</h3>
-									<p>Proper discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties</p>
+									<p>Proper discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties, short term investment in exchange for a lifetime citizenship, a safety net for the family in an unpredictable word, family members (such as spouse, child and siblings, etc.) can also be added later</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
@@ -289,22 +291,17 @@
 								<section>
 									<span class="icon solid style2 major fa-hashtag"></span>
 									<h3>Pristine Environment</h3>
-									<p>Saint Kitts and Nevis is well known and particularly famous for beautiful beaches, pristine tropical forests and friendly locals, the ability to live and work freely in multiple countries, greater future educational opportunities for children</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-bolt"></span>
-									<h3>Safe</h3>
-									<p>Saint Kitts and Nevis is safe, walkable and has great weather</p>
+									<p>Saint Kitts and Nevis is well known and particularly famous for beautiful beaches, pristine tropical forests and friendly locals, the ability to live and work freely in multiple countries, greater future educational opportunities for children, Saint Kitts and Nevis is also very safe, walkable and has great weather</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-leaf"></span>
-									<h3>English access</h3>
-									<p>Saint Kitts and Nevis citizens are fluent English speakers</p>
+									<h3>Ease of access</h3>
+									<p>Saint Kitts and Nevis citizens are fluent English speakers, ease of traveling as the jurisdictions have visa-free access to multiple countries, increased chances of visa approvals</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-envelope"></span>
-									<h3>Ultrices</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Lifetime citizenship</h3>
+									<p>XXXXXXXXXXXXXX</p>
 								</section>
 							</div>
 						</div>
