Test to remove gallery of photos

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 							<p>We already have a lengthy proven track-record of successful applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Germany</b>, <b>Japan</b>, to successfully obtain citizenship.  If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will literally open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent children.</p>
 						</div>
 
-						<!-- Gallery -->
+						<!-- Removing Gallery
+						<!-- Gallery
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
@@ -237,6 +238,7 @@
 									</div>
 								</article>
 							</div>
+						-->
 
 					</section>
 
