Cleaning up "Why SKN" section (only 9)

--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
-									<h3>Fiscality</h3>
-									<p>A low tax regime, exempting taxes on worldwide income, capital gains and inheritance, security and peace of mind of being a citizen of a country with a stable government and economy</p>
+									<h3>Stability</h3>
+									<p>A low tax regime, exempting taxes on worldwide income, capital gains and inheritance, security and peace of mind of being a citizen of a country with a stable government and economy. Saint Kitts and Nevis citizens are fluent English speakers, providing ease of traveling along with increased chances of visa approvals</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
@@ -294,16 +294,6 @@
 									<span class="icon solid style2 major fa-hashtag"></span>
 									<h3>Pristine Environment</h3>
 									<p>Saint Kitts and Nevis is well known and particularly famous for beautiful beaches, pristine tropical forests and friendly locals, the ability to live and work freely in multiple countries, greater future educational opportunities for children, Saint Kitts and Nevis is also very safe, walkable and has great weather</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-leaf"></span>
-									<h3>Ease of access</h3>
-									<p>Saint Kitts and Nevis citizens are fluent English speakers, ease of traveling as the jurisdictions have visa-free access to multiple countries, increased chances of visa approvals</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-envelope"></span>
-									<h3>Lifetime citizenship</h3>
-									<p>XXXXXXXXXXXXXX</p>
 								</section>
 							</div>
 						</div>
